--- a/src/stylesheets/Component.module.css
+++ b/src/stylesheets/Component.module.css
@@ -1,3 +1,27 @@
+.header {
+  height: 6rem;
+  display: block;
+  border-bottom: 1px solid #ccc;
+}
+.headerwrapper {
+  display: grid;
+  justify-content: space-evenly;
+  grid-template-columns: repeat(2, auto);
+}
+
+.heading {
+  top: 2rem;
+  left: 4rem;
+  cursor: pointer;
+  position: absolute;
+  background-color: #f3ec78;
+  background-image: linear-gradient(45deg, #f3ec78, #af4261);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
 .form {
   display: grid;
   grid-gap: 10%;
@@ -67,5 +91,50 @@
   }
   .footerinfo {
     grid-gap: 15%;
+  }
+}
+@media screen and (min-width: 800px) {
+  .herosection {
+    grid-gap: 15%;
+  }
+  .footer {
+    bottom: 6%;
+    padding-bottom: 6%;
+    position: relative;
+  }
+  .socialicons {
+    width: 5%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .form {
+    top: 30%;
+    width: 60%;
+    position: absolute;
+  }
+  .herosection {
+    top: 30%;
+    width: 30%;
+    right: 3rem;
+    padding: unset;
+    grid-gap: 2rem;
+    position: absolute;
+  }
+  .footer {
+    bottom: 2%;
+    position: absolute;
+    padding-top: unset;
+    padding-bottom: 4%;
+    grid-template-columns: repeat(2, auto);
+  }
+  .socialicons {
+    width: 10%;
+  }
+}
+
+@media screen and (max-height:700px) {
+  .footer {
+    position: relative;
+    padding-top: 25rem;
   }
 }
